objects/fcio1__Industry_Taxonomy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Industry_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A Generic Case Sensitive External Id Field for Industry Taxanomy Object</description>
        <externalId>true</externalId>
        <label>Industry External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fcio1__Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__NAICS_CODE__c</fullName>
        <label>NAICS CODE</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fcio1__SIC_Code__c</fullName>
        <label>Do not use</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fcio1__SIC__c</fullName>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Sector__c</fullName>
        <label>Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Sub_Sector__c</fullName>
        <label>Sub Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Super_Sector__c</fullName>
        <label>Super Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Fullcast Industry Taxonomy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <columns>fcio1__NAICS_CODE__c</columns>
        <columns>fcio1__Industry__c</columns>
        <columns>fcio1__Sector__c</columns>
        <columns>fcio1__SIC_Code__c</columns>
        <columns>fcio1__Super_Sector__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry Taxonomy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IndustryTaxonomys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>